# khala

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  config.yaml  docker-compose.test.yml  docker-compose.yml  entities.yaml  init.sql  otel-config.yaml  pyproject.toml  tempo-config.yaml
docs/: API_CONTRACT.md  MCP_SERVER.md  PIPELINE_SPEC.md  README.md  SLACK_BOT.md  UI_INTEGRATION.md  khala-mvp-design.md
khala/: __init__.py  api.py  cli.py  db.py  rid.py  utils.py
khala/index/: bm25.py  embed.py  graph_extractor.py
khala/ingest/: chunker.py  classifier.py  collector.py  pipeline.py  scanner.py
khala/llm/: answer.py  prompts.py
khala/mcp/: __main__.py  server.py
khala/models/: __init__.py  chunk.py  document.py  edge.py  entity.py  evidence.py  observed_edge.py  resource.py
khala/otel/: aggregator.py  diff_engine.py  resolver.py
khala/providers/: embedding.py  llm.py
khala/repositories/: graph.py
khala/search/: evidence_packet.py  hybrid.py  router.py
khala/slack/: app.py  bot.py  formatter.py
khala/web/: index.html
khala/web/css/: style.css
khala/web/js/: api.js  app.js
khala/web/js/components/: markdown.js  status-bar.js  toast.js
khala/web/js/views/: chat.js  diff.js  documents.js  graph.js  upload.js
tests/: conftest.py  test_api.py  test_bm25_korean.py  test_crm.py  test_diff.py  test_e2e.py  test_graph.py  test_hybrid.py  test_integration.py  test_mcp.py  test_otel.py  test_quarantine.py  test_slack.py  test_streaming.py  test_suggest.py
